dataset1235/2025-2/2947369575/users/4213704810/executions/1003782500_1626817775.log
== RUN (2025-09-01 23:06:27)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

r = float(input())

print(pi())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:07:49)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

#r = float(input())

print(pi())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:07:20)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

#r = float(input())

print(math.pi())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:08:06)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

#r = float(input())

print(pi()*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi()*2)
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi()*2)
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi()*2)
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi()*2)
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi()*2)
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi()*2)
          ^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:06:16)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

r = float(input())

print(Math.PI())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(Math.PI())
          ^^^^
NameError: name 'Math' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(Math.PI())
          ^^^^
NameError: name 'Math' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(Math.PI())
          ^^^^
NameError: name 'Math' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(Math.PI())
          ^^^^
NameError: name 'Math' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(Math.PI())
          ^^^^
NameError: name 'Math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(Math.PI())
          ^^^^
NameError: name 'Math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:08:26)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

#r = float(input())

print(pi*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
6.283185307179586
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
6.283185307179586
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
6.283185307179586
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
6.283185307179586
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
6.283185307179586
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
6.283185307179586
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:07:21)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

#r = float(input())

print(math.pi())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:06:48)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math

r = float(input())

print(math.PI())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 4
    from math
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 4
    from math
             ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 4
    from math
             ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 4
    from math
             ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 4
    from math
             ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 4
    from math
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:07:01)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

r = float(input())

print(math.pi())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.pi())
          ^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 23:09:38)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

r = float(input())
area = pi*(r**2)
volume = (4/3)*pi*(r**3)

print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:07:37)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

#r = float(input())

print(pi())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:06:55)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

r = float(input())

print(math.PI())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.PI())
          ^^^^^^^
AttributeError: module 'math' has no attribute 'PI'. Did you mean: 'pi'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.PI())
          ^^^^^^^
AttributeError: module 'math' has no attribute 'PI'. Did you mean: 'pi'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.PI())
          ^^^^^^^
AttributeError: module 'math' has no attribute 'PI'. Did you mean: 'pi'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.PI())
          ^^^^^^^
AttributeError: module 'math' has no attribute 'PI'. Did you mean: 'pi'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.PI())
          ^^^^^^^
AttributeError: module 'math' has no attribute 'PI'. Did you mean: 'pi'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(math.PI())
          ^^^^^^^
AttributeError: module 'math' has no attribute 'PI'. Did you mean: 'pi'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:07:50)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

#r = float(input())

print(pi())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(pi())
          ^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
